--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,6 +3,14 @@ ja:
     models:
       user: ユーザー
       user_classification: ユーザー種別
+      order: 注文
+      order_detail: 注文詳細
+      shipment_status: 発送状態
+      product: 商品
+      category: カテゴリー
+      product_status: 商品状態
+      sale_status: 販売状態
+      purchase: 仕入
     attributes:
       user:
         password: パスワード
@@ -18,6 +26,33 @@ ja:
         company_name: 会社名
       user_classification:
         user_classification_name: ユーザー種別名
+      order:
+        order_date: 注文日
+        order_number: 注文番号
+      order_detail:
+        order_detail_number: 注文番号
+        order_quantity: 注文個数
+        shipment_date: 発送日
+      shipment_status:
+        shipment_status_name: 発送状態名
+      product:
+        product_name: 商品名
+        price: 販売単価
+        description: 商品説明
+        regist_date: 商品登録日
+        delete_flag: deleteフラグ
+      category:
+        category_name: カテゴリー名
+      product_status:
+        product_status_name: 商品状態名
+      sale_status:
+        sale_status_name: 販売状態名
+      purchase:
+        purchase_price: 仕入価格
+        purchase_quantity: 仕入個数
+        purchase_company: 仕入先会社
+        order_date: 発注日
+        purchase_date: 納入日
   views:
     pagination:
       first: « 最初
