--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,7 @@ ja:
     attributes:
       user:
         password: パスワード
+        password_confirmation: パスワード再入力
         last_name: 姓
         first_name: 名
         zipcode: 郵便番号
